--- a/social.css
+++ b/social.css
@@ -60,7 +60,7 @@
 .play-button {
   position: absolute;
   top: 85%;
-  left: 100%;
+  left: 50%;
   transform: translate(-50%, -50%);
   font-size: 3rem;
   color: white;
@@ -69,6 +69,7 @@
   pointer-events: none;
   user-select: none;
   transition: opacity 0.3s ease;
+  width: 10%;
 }
 
 .video-placeholder:hover .play-button {
